--- a/about.html
+++ b/about.html
@@ -45,166 +45,165 @@
     </div>
     <!-- ========== End Loading Page ========== -->
 
+<!-- ========== Menu ========== -->
+<div class="site-header dsn-container dsn-load-animate">
+    <div class="extend-container d-flex w-100 align-items-baseline justify-content-between align-items-end">
+        <div class="inner-header p-relative">
+            <div class="main-logo">
+                <a class="effect-ajax" href="index.html" data-dsn="parallax">
+                    <img class="light-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo.png" alt="" />
+                    <img class="dark-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo-dark.png" alt="" />
+                </a>
+            </div>
+        </div>
+        <div class="menu-icon d-flex align-items-baseline">
+            <div class="text-menu p-relative font-heading text-transform-upper">
+                <div class="p-absolute text-button">Menu</div>
+                <div class="p-absolute text-open">Open</div>
+                <div class="p-absolute text-close">Close</div>
+            </div>
+            <div class="icon-m" data-dsn="parallax" data-dsn-move="10">
+                <span class="menu-icon-line p-relative d-inline-block icon-top"></span>
+                <span class="menu-icon-line p-relative d-inline-block icon-center"></span>
+                <span class="menu-icon-line p-relative d-block icon-bottom"></span>
+            </div>
+        </div>
+        <nav class="accent-menu dsn-container main-navigation p-absolute w-100 d-flex align-items-baseline">
+            <div class="menu-cover-title">Menu</div>
+            <ul class="extend-container p-relative d-flex flex-column justify-content-center h-100">
 
-    <!-- ========== Menu ========== -->
-    <div class="site-header dsn-container dsn-load-animate">
-        <div class="extend-container d-flex w-100 align-items-baseline justify-content-between align-items-end">
-            <div class="inner-header p-relative">
-                <div class="main-logo">
-                    <a href="index.html" data-dsn="parallax">
-                        <img class="light-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo.png" alt="" />
-                        <img class="dark-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo-dark.png" alt="" />
+                <li class="dsn-drop-down">
+                    <a href="index.html" class="user-no-selection">
+                        <span class="dsn-title-menu">Home</span>
                     </a>
-                </div>
-            </div>
-            <div class="menu-icon d-flex align-items-baseline">
-                <div class="text-menu p-relative  font-heading text-transform-upper">
-                    <div class="p-absolute text-button">Menu</div>
-                    <div class="p-absolute text-open">Open</div>
-                    <div class="p-absolute text-close">Close</div>
-                </div>
-                <div class="icon-m" data-dsn="parallax" data-dsn-move="10">
-                    <span class="menu-icon-line p-relative d-inline-block icon-top"></span>
-                    <span class="menu-icon-line p-relative d-inline-block icon-center"></span>
-                    <span class="menu-icon-line p-relative d-block icon-bottom"></span>
-                </div>
-            </div>
-            <nav class="accent-menu dsn-container main-navigation p-absolute  w-100  d-flex align-items-baseline ">
-                <div class="menu-cover-title">Menu</div>
-                <ul class="extend-container p-relative d-flex flex-column justify-content-center h-100">
+                </li>
 
-                    <li class="dsn-drop-down">
-                        <a href="index.html" class="user-no-selection">
-                            <span class="dsn-title-menu">Home</span>
+
+                <li class="dsn-drop-down">
+                    <a href="about.html" class="user-no-selection">
+                        <span class="dsn-title-menu">About</span>
+                    </a>
+
+
+
+                    <li>
+                        <a href="TOS.html">
+                            <span class="dsn-title-menu">Terms and Service</span>
+
+                            <span class="dsn-bg-arrow"></span>
                         </a>
                     </li>
 
+                    <li>
+                        <a href="CommStatus.html">
+                            <span class="dsn-title-menu">Commission status</span>
+
+                            <span class="dsn-bg-arrow"></span>
+                        </a>
+                    </li>
 
                     <li class="dsn-drop-down">
-                        <a href="about.html" class="user-no-selection">
-                            <span class="dsn-title-menu">About</span>
+                        <a href="#" class="user-no-selection">
+                            <span class="dsn-title-menu">Artworks</span>
+                            <span class="dsn-meta-menu">06</span>
+                            <span class="dsn-bg-arrow"></span>
                         </a>
 
-
-
-                        <li>
-                            <a href="TOS.html">
-                                <span class="dsn-title-menu">Terms and Service</span>
-
-                                <span class="dsn-bg-arrow"></span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="CommStatus.html">
-                                <span class="dsn-title-menu">Commission status</span>
-
-                                <span class="dsn-bg-arrow"></span>
-                            </a>
-                        </li>
-
-                        <li class="dsn-drop-down">
-                            <a href="#" class="user-no-selection">
-                                <span class="dsn-title-menu">Artworks</span>
-                                <span class="dsn-meta-menu">06</span>
-                                <span class="dsn-bg-arrow"></span>
-                            </a>
-
-                            <ul>
-                                <li class="dsn-back-menu">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/left-chevron.svg" alt="" />
-                                    <span class="dsn-title-menu">Go back</span>
-                                </li>
-
-                                <li>
-                                    <a href="Fanart.html">
-                                        <span class="dsn-title-menu">FanArt</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="oc_commissions.html">
-                                        <span class="dsn-title-menu">OC Commission</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="work.html">
-                                        <span class="dsn-title-menu">Commission</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="work.html">
-                                        <span class="dsn-title-menu">Original Characters</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="work.html">
-                                        <span class="dsn-title-menu">Smol Characters / Loli</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="allart.html">
-                                        <span class="dsn-title-menu">All Artworks</span>
-                                    </a>
-                                </li>
-
-
-                            </ul>
-                        </li>
-
-                        <li class="dsn-drop-down">
-                            <a href="project1.html" class="user-no-selection">
-                                <span class="dsn-title-menu">Character Lore</span>
-                            </a>
-                        </li>
                         <ul>
+                            <li class="dsn-back-menu">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/left-chevron.svg" alt="" />
+                                <span class="dsn-title-menu">Go back</span>
+                            </li>
+
+                            <li>
+                                <a href="Fanart.html">
+                                    <span class="dsn-title-menu">FanArt</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="oc_commissions.html">
+                                    <span class="dsn-title-menu">OC Commission</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="Commissions.html">
+                                    <span class="dsn-title-menu">Commission</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="oric.html">
+                                    <span class="dsn-title-menu">Original Characters</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="loli.html">
+                                    <span class="dsn-title-menu">Smol Characters / Loli</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="allart.html">
+                                    <span class="dsn-title-menu">All Artworks</span>
+                                </a>
+                            </li>
+
 
                         </ul>
-                        <div class="container-content p-absolute h-100 left-60 d-flex flex-column justify-content-center">
-                            <div class="nav__info">
-                                <div class="nav-content">
-                                    <p class="title-line">Social!</p>
-                                    <p class="links over-hidden">
-                                        <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
-                >
-              </p>
-              <p class="links over-hidden">
-                <a
-                  href="https://www.pixiv.net/en/users/72475260"
-                  data-hover-text="kikiis_art"
-                  class="link-hover"
-                  >Pixiv</a
-                >
-              </p>
-            </div>
-            <div class="nav-content">
-              <p class="title-line">Contact</p>
-              <a>Twitter/Discord</a>
-                                </div>
-                            </div>
-                            <div class="nav-social nav-content">
-                                <div class="nav-social-inner p-relative">
-                                    <p class="title-line">Follow us</p>
-                                    <ul>
+                    </li>
 
+                    <li class="dsn-drop-down">
+                        <a href="lore.html" class="user-no-selection">
+                            <span class="dsn-title-menu">Character Lore</span>
+                        </a>
+                    </li>
+                    <ul>
 
-                                        <li>
-                                            <a href="https://www.pixiv.net/en/users/72475260" target="_blank" rel="nofollow">pixiv.
-                    <div class="icon-circle"></div>
-                  </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
-                    <div class="icon-circle"></div>
-                  </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                    </ul>
+                    <div class="container-content p-absolute h-100 left-60 d-flex flex-column justify-content-center">
+                        <div class="nav__info">
+                            <div class="nav-content">
+                                <p class="title-line">Social!</p>
+                                <p class="links over-hidden">
+                                    <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
+              >
+            </p>
+            <p class="links over-hidden">
+              <a
+                href="https://www.pixiv.net/en/users/72475260"
+                data-hover-text="kikiis_art"
+                class="link-hover"
+                >Pixiv</a
+              >
+            </p>
+          </div>
+          <div class="nav-content">
+            <p class="title-line">Contact</p>
+            <a href="https://discord.gg/RFxCn4cWwa">Discord</a>
                             </div>
                         </div>
-            </nav>
-        </div>
+                        <div class="nav-social nav-content">
+                            <div class="nav-social-inner p-relative">
+                                <p class="title-line">Follow us</p>
+                                <ul>
+
+
+                                    <li>
+                                        <a href="https://www.pixiv.net/en/users/72475260" target="_blank" rel="nofollow">pixiv.
+                  <div class="icon-circle"></div>
+                </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
+                  <div class="icon-circle"></div>
+                </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+        </nav>
     </div>
-    <!-- ========== End Menu ========== -->
+</div>
+<!-- ========== End Menu ========== -->
 
 
     <main class="main-root">
