--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="oric.html">
                                         <span class="dsn-title-menu">Original Characters</span>
                                     </a>
                                 </li>
@@ -159,7 +159,7 @@
                         </li>
 
                         <li class="dsn-drop-down">
-                            <a href="project1.html" class="user-no-selection">
+                            <a href="lore.html" class="user-no-selection">
                                 <span class="dsn-title-menu">Character Lore</span>
                             </a>
                         </li>
