--- a/Commissions.html
+++ b/Commissions.html
@@ -155,7 +155,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="oric.html">
                                         <span class="dsn-title-menu">Original Characters</span>
                                     </a>
                                 </li>
@@ -175,7 +175,7 @@
                         </li>
 
                         <li class="dsn-drop-down">
-                            <a href="project1.html" class="user-no-selection">
+                            <a href="lore.html" class="user-no-selection">
                                 <span class="dsn-title-menu">Character Lore</span>
                             </a>
                         </li>
@@ -188,20 +188,20 @@
                                     <p class="title-line">Social!</p>
                                     <p class="links over-hidden">
                                         <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
-                >
-              </p>
-              <p class="links over-hidden">
-                <a
-                  href="https://www.pixiv.net/en/users/72475260"
-                  data-hover-text="kikiis_art"
-                  class="link-hover"
-                  >Pixiv</a
-                >
-              </p>
-            </div>
-            <div class="nav-content">
-              <p class="title-line">Contact</p>
-              <a>Twitter/Discord</a>
+                  >
+                </p>
+                <p class="links over-hidden">
+                  <a
+                    href="https://www.pixiv.net/en/users/72475260"
+                    data-hover-text="kikiis_art"
+                    class="link-hover"
+                    >Pixiv</a
+                  >
+                </p>
+              </div>
+              <div class="nav-content">
+                <p class="title-line">Contact</p>
+                <a href="https://discord.gg/RFxCn4cWwa">Discord</a>
                                 </div>
                             </div>
                             <div class="nav-social nav-content">
@@ -212,13 +212,13 @@
 
                                         <li>
                                             <a href="https://www.pixiv.net/en/users/72475260" target="_blank" rel="nofollow">pixiv.
-                    <div class="icon-circle"></div>
-                  </a>
+                      <div class="icon-circle"></div>
+                    </a>
                                         </li>
                                         <li>
                                             <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
-                    <div class="icon-circle"></div>
-                  </a>
+                      <div class="icon-circle"></div>
+                    </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -364,8 +364,8 @@
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
                             <h6>Page</h6>
-                            <span class="curent">2</span>
-                            <span class="full">6</span>
+                            <span class="curent">3</span>
+                            <span class="full">5</span>
                         </div>
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
                             <span>keep scrolling down</span>
