--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                                                         <span>information</span>
 
                                                         <div class="d-block"></div>
-                                                        <h1 class="title user-no-selection d-inline-block ">
-                                                            <a href="project2.html" class="effect-ajax" data-dsn-ajax="slider">Info</a>
-                                                        </h1>
+                                                        <h2 class="title user-no-selection d-inline-block ">
+                                                            <a href="#" class="effect-ajax" data-dsn-ajax="slider">Info!</a>
+                                                        </h2>
 
                                                         <p class="max-w570 mt-30 description ">Want to Commission me? Head over to TOS page first there will be commission link.</p>
                                                     </div>
