--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                                                         <div class="d-block"></div>
                                                         <h2 class="title user-no-selection d-inline-block ">
-                                                            <a href="#" class="effect-ajax" data-dsn-ajax="slider">Info!</a>
+                                                            <a  class="effect-ajax" data-dsn-ajax="slider">Info</a>
                                                         </h2>
 
                                                         <p class="max-w570 mt-30 description ">Want to Commission me? Head over to TOS page first there will be commission link.</p>
