--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
                                                         <span>Commission</span>
                                                         <span>information</span>
 
-                                                        <div class="d-block"></div>
+                                                        <div class="d-block">
                                                         <h2 class="title user-no-selection d-inline-block ">
-                                                            <a  class="effect-ajax" data-dsn-ajax="slider">Info</a>
+                                                            <a class="effect-ajax" data-dsn-ajax="slider">Info</a>
                                                         </h2>
-
+                                                    </div>
                                                         <p class="max-w570 mt-30 description ">Want to Commission me? Head over to TOS page first there will be commission link.</p>
                                                     </div>
                                                 </div>
