--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                                     </div>
                                                     <div class="d-block"></div>
                                                     <h1 class="title user-no-selection d-inline-block ">
-                                                        <a href="#" class="effect-ajax" data-dsn-ajax="slider">Welcome!</a>
+                                                        <a class="effect-ajax" data-dsn-ajax="slider">Welcome!</a>
                                                     </h1>
 
                                                     <p class="max-w570 mt-30 description ">Scroll down and pick a category from bellow options to view my work!<br></p>
