--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               </div>
               <div class="nav-content">
                 <p class="title-line">Contact</p>
-                <a href="https://discord.gg/RFxCn4cWwa">Discord</a>
+                <a href="https://discord.gg/msFcP65Ny8">Discord</a>
                                 </div>
                             </div>
                             <div class="nav-social nav-content">
@@ -420,7 +420,7 @@
                                 Want to commission me.. click this button for it!
                             </p>
 
-                            <a data-dsn-title="End" href="https://discord.gg/RFxCn4cWwa" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                            <a data-dsn-title="End" href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                 <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
                             </a>
 
@@ -508,7 +508,7 @@
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
                                         <h2 class="section-title title-cap">Discord</h2>
-                                        <a target=”_blank” href="https://discord.gg/RFxCn4cWwa" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <a target=”_blank” href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
