--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </title>
     <meta content="Embed Title" property="og:title" />
     <meta content="Site Description" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://shirozu.tk" property="og:url" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
     <!-- Font Google -->
