--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         kiki's Portfolio
     </title>
     <meta content="kiki's portfolio" property="og:title" />
-    <meta content="Artworks/gallery and commission details" property="og:description" />
+    <meta content="Artworks and commission details" property="og:description" />
     <meta content="https://shirozu.tk" property="og:url" />
-    <meta content="#FFBCBC" data-react-helmet="true" name="theme-color" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
