--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolio
+        kki's Portfolio
     </title>
     <meta content="kiki's portfolio" property="og:title" />
     <meta content="Artworks and commission details" property="og:description" />
