--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 
     <!--  Title -->
     <title>
-        kki's Portfolio
+        kiki's Portfolio
     </title>
-    <meta content="kiki's portfolio" property="og:title" />
-    <meta content="Artworks and commission details" property="og:description" />
-    <meta content="https://shirozu.tk" property="og:url" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-
+   
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
     <noscript><link
