--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </title>
     <meta content="kiki's portfolio" property="og:title" />
     <meta content="Artworks and commission details" property="og:description" />
-    <meta content="https://shirozu.tk" property="og:url" />
+    <meta content="https://shirozu.tk/#a" property="og:url" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
     <!-- Font Google -->
