--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>
         kiki's Portfolio
     </title>
-    <meta content="kiki's portfolio" property="og:title" />
-    <meta content="Artworks and commission details" property="og:description" />
+    <meta content="Kiki's portfolio" property="og:title" />
+    <meta content="Home page" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
