--- a/oric.html
+++ b/oric.html
@@ -9,8 +9,13 @@
     <meta name="keyword" content="agency, business, corporate, creative, freelancer, interior, joomla template, K2 Blog, minimal, modern, multipurpose, personal, portfolio, responsive, simple" />
 
     <!--  Title -->
-    <title>Kiki's portfolio</title>
-
+    <title>
+        kiki's Portfolio
+    </title>
+    <meta content="Kiki's portfolio" property="og:title" />
+    <meta content="Original characters section" property="og:description" />
+    <meta content="https://shirozu.tk/#a" property="og:url" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap"
