--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -13,7 +13,7 @@
         kiki's Portfolio
     </title>
     <meta content="Kiki's portfolio" property="og:title" />
-    <meta content="Artworks and commission details" property="og:description" />
+    <meta content="oc commissions section" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
