--- a/oric.html
+++ b/oric.html
@@ -15,7 +15,7 @@
     <meta content="Kiki's portfolio" property="og:title" />
     <meta content="Original characters section" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta content="#FFD6D6" data-react-helmet="true" name="theme-color" />
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap"
