--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta content="Kiki's portfolio" property="og:title" />
     <meta content="Home page" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
+    <meta content="assets\img\favicon.ico"property="og:image"
     <meta content="#FFD6D6" data-react-helmet="true" name="theme-color" />
 
     <!-- Font Google -->
