--- a/TOS.html
+++ b/TOS.html
@@ -188,7 +188,7 @@
           </div>
           <div class="nav-content">
             <p class="title-line">Contact</p>
-            <a href="https://discord.gg/RFxCn4cWwa">Discord</a>
+            <a href="https://discord.com/invite/msFcP65Ny8">Discord</a>
                             </div>
                         </div>
                         <div class="nav-social nav-content">
@@ -463,7 +463,7 @@
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
                                         <h2 class="section-title title-cap">Discord</h2>
-                                        <a target=”_blank” href="https://discord.gg/RFxCn4cWwa" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <a target=”_blank” href="https://discord.com/invite/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
