--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="agency, business, corporate, creative, freelancer, interior, joomla template, K2 Blog, minimal, modern, multipurpose, personal, portfolio, responsive, simple" />
 
     <!--  Title -->
-    <title>Eremia Creative Ajax Portfolio Multi-Purpose & personal HTML Template</title>
+    <title>kiki's portfolio</title>
 
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -101,6 +101,13 @@
                             <span class="dsn-bg-arrow"></span>
                         </a>
                     </li>
+                    <li>
+                        <a href="oric.html">
+                            <span class="dsn-title-menu">Commission Pricing/list</span>
+
+                            <span class="dsn-bg-arrow"></span>
+                        </a>
+                    </li>
 
                     <li class="dsn-drop-down">
                         <a href="#" class="user-no-selection">
@@ -130,11 +137,7 @@
                                     <span class="dsn-title-menu">Commission</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="oric.html">
-                                    <span class="dsn-title-menu">Original Characters</span>
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a href="loli.html">
                                     <span class="dsn-title-menu">Smol Characters / Loli</span>
@@ -219,12 +222,12 @@
                                 <span class="pl-10 pr-10 background-main dsn-load-animate">Shizu</span>
                             </p>
                             <h1 class="title mt-30 dsn-load-animate text-transform-upper">
-                                About page <br> is in work
+                                Kiroki <br> Shirozu
                             </h1>
                         </div>
                     </div>
                 </header>
-                <!-- ========== End Header Normal ========== 
+                <!-- ========== End Header Normal ========== -->
 
 
                 <div class="wrapper">
@@ -235,14 +238,14 @@
                         </div>
                     </div>
 
-                     ========== About Section ========== 
+                    <!-- ========== About Section ========== -->
                     <section class="about-section-2 p-relative section-margin" data-dsn-title="About">
                         <div class="container">
                             <div class="row">
                                 <div class="col-12">
                                     <p class="sub-heading line-shap line-shap-before mb-15">
                                         <span class="line-bg-right">
-                                            What We Do
+                                            What I Do
                                         </span>
 
                                     </p>
@@ -250,7 +253,7 @@
                                 <div class="col-lg-6">
                                     <div class="box-left">
                                         <div class="section-title">
-                                            <h4>Keep Your Business Safe & Ensure High Availability
+                                            <h4>Drawing, illustrations and Concept work
                                             </h4>
 
                                         </div>
@@ -258,11 +261,10 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="box-right">
-                                        <p class="max-w570 dsn-up mb-15 ">A business consulting agency is involved in the planning, implementation, and education of businesses. We work directly with business owners on developing a business plan, identifying marketing needs and developing
-                                            the necessary skills for business ownership.</p>
+                                        <p class="max-w570 dsn-up mb-15 ">I draw mostly stylised/Anime style illustration including every type</p>
 
                                         <p class="max-w570 dsn-up">
-                                            but deploy to production. C-suite. First-order optimal strategies build on a culture of contribution and inclusion so those options
+                                           I do not draw gore, or any blood related things
                                         </p>
                                     </div>
                                 </div>
@@ -290,7 +292,7 @@
                             </div>
                         </div>
                     </section>
-                    ========== End About Section ========== 
+                    <!--========== End About Section ========== -->
 
                     <div class="section-margin has-popup over-hidden p-relative">
                         <div class="container">
@@ -309,7 +311,7 @@
 
 
 
-                    ========== awards Section ========== 
+                    <!--========== awards Section ========== -->
                     <div class="awards-section p-relative section-margin" data-dsn-title="Awards">
                         <div class="container">
                             <div class="row">
@@ -365,10 +367,10 @@
                             </div>
                         </div>
                     </div>
-                    < ========== End awards Section ========== -
+                    <!--- ========== End awards Section ========== -->
 
 
-                    ========== Team Section ========== 
+                    <!--========== Team Section ==========--> 
                     <section class="team team-about section-margin p-relative" data-dsn-title="Team">
                         <div class="container mb-70 d-flex flex-column">
 
@@ -481,10 +483,10 @@
                             </div>
                         </div>
                     </section>
-                    ========== End Team Section ==========
+                   <!-- ========== End Team Section ==========-->
 
 
-                    ========== testimonial Section ========== 
+                   <!-- ========== testimonial Section ==========--> 
                     <section class="testimonials testimonials-personal section-margin" data-dsn-title="testimonials">
                         <div class="container mb-70 d-flex flex-column">
 
@@ -612,10 +614,10 @@
                             </div>
                         </div>
                     </section>
-                     ========== End testimonial Section ========== 
+                  <!--   ========== End testimonial Section ==========--> 
 
 
-                     ========== End brand-client Section ========== 
+                   <!--  ========== End brand-client Section ==========--> 
                     <section class="brand-client section-margin" data-dsn-animate="section" data-dsn-title="Client">
 
                         <div class="container mb-70 d-flex flex-column">
@@ -681,10 +683,10 @@
                             </div>
                         </div>
                     </section>
-                     ========== End brand-client Section ========== 
+                   <!--  ========== End brand-client Section ==========--> 
 
 
-                    ==========  next page  ========== 
+                   <!-- ==========  next page  ==========--> 
                     <section class="next-page p-relative section-padding border-top background-section">
                         <div class="bg-circle-dotted"></div>
                         <div class="bg-circle-dotted bg-circle-dotted-right"></div>
@@ -715,7 +717,7 @@
                             </div>
                         </div>
                     </section>
-                     ========== End next page ========== -->
+                   <!--  ========== End next page ========== -->
                     </div>
                     
                     </div>
