--- a/oric.html
+++ b/oric.html
@@ -13,7 +13,7 @@
         kiki's Portfolio
     </title>
     <meta content="Kiki's portfolio" property="og:title" />
-    <meta content="Original characters section" property="og:description" />
+    <meta content="Commission list for prices, and what I do and don't." property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
     <meta content="#FFD6D6" data-react-helmet="true" name="theme-color" />
     <!-- Font Google -->
@@ -106,6 +106,13 @@
                             <span class="dsn-bg-arrow"></span>
                         </a>
                     </li>
+                    <li>
+                        <a href="oric.html">
+                            <span class="dsn-title-menu">Commission Pricing/list</span>
+
+                            <span class="dsn-bg-arrow"></span>
+                        </a>
+                    </li>
 
                     <li class="dsn-drop-down">
                         <a href="#" class="user-no-selection">
@@ -135,11 +142,7 @@
                                     <span class="dsn-title-menu">Commission</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="oric.html">
-                                    <span class="dsn-title-menu">Original Characters</span>
-                                </a>
-                            </li>
+                        
                             <li>
                                 <a href="loli.html">
                                     <span class="dsn-title-menu">Smol Characters / Loli</span>
@@ -224,7 +227,7 @@
                                 <span class="pl-10 pr-10 background-main dsn-load-animate">Shizu</span>
                             </p>
                             <h1 class="title mt-30 dsn-load-animate text-transform-upper">
-                                OC WORK page <br> is in work
+                                 <br> in work
                             </h1>
                         </div>
                     </div>
