--- a/allart.html
+++ b/allart.html
@@ -125,7 +125,13 @@
                             <span class="dsn-bg-arrow"></span>
                         </a>
                     </li>
+                    <li>
+                        <a href="oric.html">
+                            <span class="dsn-title-menu">Commission Pricing/list</span>
 
+                            <span class="dsn-bg-arrow"></span>
+                        </a>
+                    </li>
                     <li class="dsn-drop-down">
                         <a href="#" class="user-no-selection">
                             <span class="dsn-title-menu">Artworks</span>
@@ -154,11 +160,7 @@
                                     <span class="dsn-title-menu">Commission</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="oric.html">
-                                    <span class="dsn-title-menu">Original Characters</span>
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a href="loli.html">
                                     <span class="dsn-title-menu">Smol Characters / Loli</span>
