--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -129,6 +129,13 @@
                             <span class="dsn-bg-arrow"></span>
                         </a>
                     </li>
+                    <li>
+                        <a href="oric.html">
+                            <span class="dsn-title-menu">Commission Pricing/list</span>
+
+                            <span class="dsn-bg-arrow"></span>
+                        </a>
+                    </li>
 
                     <li class="dsn-drop-down">
                         <a href="#" class="user-no-selection">
@@ -158,11 +165,7 @@
                                     <span class="dsn-title-menu">Commission</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="oric.html">
-                                    <span class="dsn-title-menu">Original Characters</span>
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a href="loli.html">
                                     <span class="dsn-title-menu">Smol Characters / Loli</span>
